--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="style.css">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-  
 
-  <header >
-  
-    <div class="menubar" >
+
+  <header>
+
+    <div class="menubar">
       <a href="#Active">Active</a>
       <a href="#about">About</a>
       <a href="#work">Work</a>
       <a href="#resume">Resume</a>
       <a href="#contact">Contact</a>
     </div>
-  
+
   </header>
   <hr color:"black">
   <br>
@@ -28,8 +28,9 @@
 
   <audio controls autoplay>
 
-    <source src="OnlyMP3.to - Adventures – A Himitsu (No Copyright Music)-MkNeIUgNPQ8-192k-1646577089289.mp3" type="audio/mpeg">
-   
+    <source src="OnlyMP3.to - Adventures – A Himitsu (No Copyright Music)-MkNeIUgNPQ8-192k-1646577089289.mp3"
+      type="audio/mpeg">
+
   </audio>
   <main>
 
@@ -53,7 +54,7 @@
                 </td>
 
                 <td>
-                  <img src="img-hajar.jpg" height="200px">
+                  <img src="img-hajar.jpeg" height="200px">
                 </td>
 
               </tr>
@@ -80,11 +81,11 @@
 
           <li>
             May-October 2022: Fullstack Javascript Web Development ,GO MY CODE.</li>
-            <br>
+          <br>
           <li>2016-2018: Master's degree in " Energy and Environmental Engineering",FS Tetouan.</li>
-           <br>
+          <br>
           <li>2015-2016: Bachelor's degree of Science and Technology in "Energy Engineering", FST Mohammedia.</li>
-            <br>
+          <br>
           <li> September 2012-January 2015: Two-year university degree of Science and Technology in "MIP",
             FST Mohammedia.</li>
 
@@ -98,7 +99,7 @@
           </li>
           <br>
           <li>
-            June-May 2017: Optimization of electrical energy in the Center Provincial Hospital of Tetouan (Methodology
+            January-May 2017: Optimization of electrical energy in the Center Provincial Hospital of Tetouan (Methodology
             of projects).
           </li>
           <br>
@@ -108,7 +109,7 @@
           </li>
           <br>
           <li>
-            april-june 2015: Internship at "Moroccan Refining Industry Limited Company (SAMIR)"".
+            April-June 2015: Internship at "Moroccan Refining Industry Limited Company (SAMIR)"".
 
           </li>
 
